Checkboc component is created

--- a/iOS-Learning/Base.lproj/Main.storyboard
+++ b/iOS-Learning/Base.lproj/Main.storyboard
@@ -21,6 +21,14 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </view>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WjL-fw-ToB" customClass="Checkbox" customModule="iOS_Learning" customModuleProvider="target">
+                                <rect key="frame" x="87" y="542" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <connections>
+                                    <action selector="checkChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="dKG-aZ-yET"/>
+                                </connections>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
