--- a/iOS-Learning/NoRecordView/NoRecordView.xib
+++ b/iOS-Learning/NoRecordView/NoRecordView.xib
@@ -15,36 +15,36 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+            <rect key="frame" x="0.0" y="0.0" width="168" height="191"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="u5R-l5-Ese">
-                    <rect key="frame" x="135" y="347" width="123" height="158"/>
-                    <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="magnifyingglass.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="HSh-Y7-Ggd">
-                            <rect key="frame" x="12.666666666666664" y="1" width="97" height="95.666666666666671"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        </imageView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eGR-Lv-NOc">
-                            <rect key="frame" x="40" y="117" width="42" height="21"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                    </subviews>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                </view>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eGR-Lv-NOc">
+                    <rect key="frame" x="59" y="136" width="50" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="50" id="5Da-Ga-yvb"/>
+                        <constraint firstAttribute="height" constant="21" id="JO2-H1-N0E"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="magnifyingglass.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="HSh-Y7-Ggd">
+                    <rect key="frame" x="36" y="32.000000000000007" width="96" height="95.666666666666686"/>
+                </imageView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="u5R-l5-Ese" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="DuL-QC-aLw"/>
-                <constraint firstItem="u5R-l5-Ese" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="135" id="eyX-ec-P3m"/>
-                <constraint firstItem="u5R-l5-Ese" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="mdk-Ts-pVg"/>
-                <constraint firstItem="u5R-l5-Ese" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="288" id="zAe-aV-Ruf"/>
+                <constraint firstItem="HSh-Y7-Ggd" firstAttribute="centerX" secondItem="eGR-Lv-NOc" secondAttribute="centerX" id="2DO-n7-rcX"/>
+                <constraint firstItem="eGR-Lv-NOc" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" id="N26-oh-tRY"/>
+                <constraint firstItem="HSh-Y7-Ggd" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="31" id="YTx-nd-PUk"/>
+                <constraint firstItem="eGR-Lv-NOc" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="59" id="deS-R2-LdV"/>
+                <constraint firstItem="eGR-Lv-NOc" firstAttribute="top" secondItem="HSh-Y7-Ggd" secondAttribute="bottom" constant="8" symbolic="YES" id="i79-oD-RZa"/>
+                <constraint firstItem="HSh-Y7-Ggd" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="yDf-e7-6iW"/>
+                <constraint firstItem="HSh-Y7-Ggd" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="36" id="zzG-iR-PUy"/>
             </constraints>
-            <point key="canvasLocation" x="71" y="-11"/>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <point key="canvasLocation" x="-100.76335877862596" y="-132.04225352112678"/>
         </view>
     </objects>
     <resources>
